syntax = "proto3";

package altalune.v1;

option go_package = "github.com/hrz8/altalune/gen/altalune/v1;altalunev1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "buf/validate/validate.proto";

message ChatbotConfig {
  string id = 1;
  google.protobuf.Struct modules_config = 2;
  google.protobuf.Timestamp created_at = 98;
  google.protobuf.Timestamp updated_at = 99;
}

message GetChatbotConfigRequest {
  string project_id = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string = {
      len: 14
    }
  ];
}

message GetChatbotConfigResponse {
  ChatbotConfig chatbot_config = 1;
}

message UpdateModuleConfigRequest {
  string project_id = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string = {
      len: 14
    }
  ];
  string module_name = 2 [
    (buf.validate.field).required = true,
    (buf.validate.field).string = {
      min_len: 1,
      max_len: 50,
      in: ["llm", "mcpServer", "widget", "prompt"]
    }
  ];
  google.protobuf.Struct config = 3 [
    (buf.validate.field).required = true
  ];
}

message UpdateModuleConfigResponse {
  ChatbotConfig chatbot_config = 1;
  string message = 2;
}

service ChatbotService {
  rpc GetChatbotConfig(GetChatbotConfigRequest) returns (GetChatbotConfigResponse) {}
  rpc UpdateModuleConfig(UpdateModuleConfigRequest) returns (UpdateModuleConfigResponse) {}
}
